infra/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: schoolmanage-prod
  labels:
    environment: production
    project: schoolmanage-app
---
apiVersion: v1
kind: Namespace
metadata:
  name: schoolmanage-test
  labels:
    environment: test
    project: schoolmanage-app
